--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
     <title>minimal signal solution for webrtc</title>
     <style>
       video {
@@ -17,7 +16,9 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container p-2">
+<div class="alert alert-success room" role="alert">
+</div>
       <div class="row p-4">
         <video id="offer" class="col-6" muted></video>
         <video id="answer" class="col-6"></video>
@@ -54,10 +55,15 @@ if (Peer.WEBRTC_SUPPORT) {
       }
 
       offerVideo.play();
-
-      var code = prompt('room name')
+      var code = null
+      if (parsed.code) {
+	code = parsed.code
+      } else {
+      	code = prompt('room name')
+      }
 
       if (code != null) {
+	$('.room').text('#' + code)
         var primus = Primus.connect();
 
         primus.on('open', function() {
